  to different characters with cp1251 and cp866. (Scott)
- Fixed an issue in date() where a : was printed for the O modifier after a P
  modifier was used. (Derick)
- Fixed an issue where exec() on Windows would eat the first and last double quotes.
  (Scott)

- Fixed PECL bug #12431 (OCI8 ping functionality is broken). (Oracle Corp.)

- Fixed bug #44769 (declaring private magic methods should throw error). (Felipe)
- Fixed bug #44913 (Segfault when using return in combination with nested loops
  and continue 2). (Dmitry)
- Fixed bug #44899 (__isset usage changes behavior of empty()) (Etienne)
- Fixed bug #44805 (rename() function is not portable to Windows). (Pierre)
- Fixed bug #44742 (timezone_offset_get() causes segmentation faults). (Derick)
- Fixed bug #44648 (Attribute names not checked for wellformedness). (Rob)
- Fixed bug #44414 (Incomplete reporting about abstract methods). (Dmitry)
- Fixed bug #44390 (mysqli_bind_param/bind_result and Object member variables)
  (Andrey)
- Fixed bug #44352 (mysqli_connect_error() false negative for host errors).
  (Andrey)
- Fixed bug #44336 (Improve pcre UTF-8 string matching performance).
  (frode at coretrek dot com, Nuno)
- Fixed bug #44257 (timelib_tz_lookup_table must use float for gmtoffset). 
  (Derick, iuri dot fiedoruk at hp dot com).
- Fixed bug #44214 (Crash using preg_replace_callback() and global variable).
  (Nuno, Scott)
- Fixed bug #44034 (FILE_IGNORE_NEW_LINES in file() does not work as expected
  when lines end in \r\n). (Ilia)
- Fixed bug #43960 (strtotime() returns timestamp in the future when given a
  bogus string). (Derick)
- Fixed bug #43832 (mysqli_get_charset() doesn't expose charset comment).
  (Andrey)
- Fixed bug #43808 (date_create never fails (even when it should)). (Derick)
- Fixed bug #43527 (DateTime created from a timestamp reports environment
  timezone). (Derick)
- Fixed bug #43426 (crash on nested call_user_func() calls). (Dmitry)